# imagebenchmarks

./: .gitignore  README.md  pyproject.toml
notes/: notes.md
scripts/: build_benchmarks.py  load_one_benchmark.py  run_all_cases.py  run_all_sims.py  run_one_case.py  run_one_sim.py  save_sim_to_csv.py
src/imagebenchmarks/: __init__.py  caseconstants.py  imagebenchmarks.py
src/imagebenchmarks/benchmarks/: case0_cylinder_0.3Mpx_1subsamp_nocrop_1656elems.dill  case0_plate_1Mpx_1subsamp_nocrop_11776elems.dill  case0_plate_1Mpx_1subsamp_nocrop_400elems.dill  case0_plate_lintri_1Mpx_1subsamp_nocrop_11776elems.dill  case100_plate_1Mpx_1subsamp_nocrop_3536elems.dill  case101_plate_1Mpx_2subsamp_nocrop_3536elems.dill  case102_plate_1Mpx_1subsamp_crop_3536elems.dill  case103_plate_1Mpx_2subsamp_crop_3536elems.dill  case104_plate_5Mpx_1subsamp_nocrop_3536elems.dill  case105_plate_5Mpx_2subsamp_nocrop_3536elems.dill  case106_plate_5Mpx_1subsamp_crop_3536elems.dill  case107_plate_5Mpx_2subsamp_crop_3536elems.dill  case108_plate_24Mpx_1subsamp_nocrop_3536elems.dill  case109_plate_24Mpx_2subsamp_nocrop_3536elems.dill  case10_cylinder_5Mpx_1subsamp_crop_1656elems.dill  case10_plate_24Mpx_1subsamp_crop_11776elems.dill  case10_plate_24Mpx_1subsamp_crop_400elems.dill  case10_plate_lintri_24Mpx_1subsamp_crop_11776elems.dill  case110_plate_24Mpx_1subsamp_crop_3536elems.dill  case111_plate_24Mpx_2subsamp_crop_3536elems.dill  case112_plate_0.3Mpx_1subsamp_nocrop_11776elems.dill  case113_plate_0.3Mpx_2subsamp_nocrop_11776elems.dill  case114_plate_0.3Mpx_1subsamp_crop_11776elems.dill  (+362 more)
(+24 files in other folders)
