[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagebenchmarks"
version = "0.0.1"
description = "Image benchmarks for the python validation engine."
authors = [
  { name = "scepticalrabbit", email = "thescepticalrabbit@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: OS Independent",
]
requires-python = "==3.11.*"
dependencies = [
  "numpy>=2.0.0",
  "dill>=0.3.9",
]

[project.urls]
"Repository" = "https://github.com/Computer-Aided-Validation-Laboratory/imagebenchmarks"
"Issue Tracker" = "https://github.com/Computer-Aided-Validation-Laboratory/imagebenchmarks/issues"


[tool.setuptools.package-data]
"imagebenchmarks.simulations" = ["*.e","*.tiff"]
"imagebenchmarks.benchmarks" = ["*.dill",]

[tool.setuptools.packages.find]
where = ["src"]
